array.island.Island.scala.error
Erreur de compilation :
Island:9: error: reassignment to val
          aux=false
             ^Island:12: error: reassignment to val
          res = res + 1
              ^Island:4: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 1 to num.length) {
         ^